fix ExtraService