@@ -2,6 +2,7 @@ package com.example.carsharing.service;
 
 import com.example.carsharing.dto.ExtraServiceCreateRequest;
 import com.example.carsharing.dto.ExtraServiceResponse;
+import com.example.carsharing.exception.ConflictException;
 import com.example.carsharing.model.ExtraService;
 import com.example.carsharing.model.ServiceCategory;
 import com.example.carsharing.repository.ExtraServiceRepository;
@@ -20,9 +21,11 @@ public class ExtraServiceService {
     private final ExtraServiceRepository extraServiceRepository;
     private final ExtraServiceMapper extraServiceMapper;
 
+    private static final String SERVICE_NOT_FOUND_MESSAGE = "Service not found with id: ";
+
     public ExtraServiceResponse createService(ExtraServiceCreateRequest request) {
         if (extraServiceRepository.existsByName(request.getName())) {
-            throw new RuntimeException("Service with name " + request.getName() + " already exists");
+            throw new ConflictException("Service with name " + request.getName() + " already exists");
         }
 
         ExtraService service = extraServiceMapper.toEntity(request);
@@ -32,7 +35,7 @@ public class ExtraServiceService {
 
     public ExtraServiceResponse getServiceById(Long id) {
         ExtraService service = extraServiceRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Service not found with id: " + id));
+                .orElseThrow(() -> new RuntimeException(SERVICE_NOT_FOUND_MESSAGE + id));
         return extraServiceMapper.toResponse(service);
     }
 
@@ -49,12 +52,12 @@ public class ExtraServiceService {
 
         return services.stream()
                 .map(extraServiceMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ExtraServiceResponse updateService(Long id, ExtraServiceCreateRequest request) {
         ExtraService service = extraServiceRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Service not found with id: " + id));
+                .orElseThrow(() -> new RuntimeException(SERVICE_NOT_FOUND_MESSAGE + id));
 
         service.setName(request.getName());
         service.setDescription(request.getDescription());
@@ -68,14 +71,14 @@ public class ExtraServiceService {
 
     public void deactivateService(Long id) {
         ExtraService service = extraServiceRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Service not found with id: " + id));
+                .orElseThrow(() -> new RuntimeException(SERVICE_NOT_FOUND_MESSAGE + id));
         service.setIsActive(false);
         extraServiceRepository.save(service);
     }
 
     public void deleteService(Long id) {
         if (!extraServiceRepository.existsById(id)) {
-            throw new RuntimeException("Service not found with id: " + id);
+            throw new ConflictException(SERVICE_NOT_FOUND_MESSAGE + id);
         }
         extraServiceRepository.deleteById(id);
     }
